# BI-Executive-Dashboard-Group-7

./: AGENTS.md  README.md  app.py  pyproject.toml
bi_agent/: .example.env  __init__.py  agent.py  bi_service.py  db_config.py  sql_executor.py  tools.py
